add env variable on appsettings.json

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,15 @@
 {
+
+  "Database": {
+    "Connection": "Server Development",
+    "Port": 1010
+  },
+  "Products": [
+    {"Code": 1, "Name": "HD em Development"},
+    {"Code": 2, "Name": "AMD em Development"},
+    {"Code": 3, "Name": "Mouse/Keyboard em Development"}
+  ],
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
