--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,15 +1,8 @@
 {
 
   "Database": {
-    "Connection": "Server Development",
-    "Port": 1010
+    "SqlServer": "Server=localhost;Database=Products;User Id=sa;Password=@Sql2019;MultipleActiveResultSets=true;Encrypt=YES;TrustServerCertificate=YES",
   },
-  "Products": [
-    {"Code": 1, "Name": "HD em Development"},
-    {"Code": 2, "Name": "AMD em Development"},
-    {"Code": 3, "Name": "Mouse/Keyboard em Development"}
-  ],
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
