Adicionando record de payload de produto

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -5,9 +5,9 @@
     "Port": 1010
   },
   "Products": [
-    {"Code": 1, "Name": "HD"},
-    {"Code": 2, "Name": "AMD"},
-    {"Code": 3, "Name": "Mouse/Keyboard"}
+    {"Code": "1", "Name": "HD"},
+    {"Code": "2", "Name": "AMD"},
+    {"Code": "3", "Name": "Mouse/Keyboard"}
   ],
 
   "Logging": {
